# revmind

./: .env.example  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  seed.py
backend/app/: config.py  context.py  database.py  llm.py  main.py
backend/app/routes/: chat.py  products.py  summary.py  trends.py
backend/tests/: conftest.py  test_routes.py  test_seed.py
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: CategoryChart.tsx  Chat.tsx  Dashboard.tsx  Fab.tsx  Header.tsx  KpiCard.tsx  Markdown.tsx  Sidebar.tsx  TrendChart.tsx
mobile/: .env.example  package-lock.json  package.json
mobile/src/: api.ts  types.ts
mobile/src/app/: _layout.tsx
mobile/src/app/(tabs)/: _layout.tsx  chat.tsx  dashboard.tsx
mobile/src/components/: CategoryChart.tsx  KpiCard.tsx  Markdown.tsx  TrendChart.tsx
mobile/src/constants/: theme.ts
